zero-cost-templating/tests/ui/compile_fail_expand/mismatched_types_unit.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail_expand/mismatched_types_unit.rs:19:5
   |
19 |     template.test_template4()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Template<TestTemplate5, (), ()>`
   |
   = note: expected unit type `()`
                 found struct `Template<TestTemplate5, (), ()>`
